# FreeCAD

./: CMakeLists.txt
cMake/: FindPySide6Tools.cmake  UseLibPackCLbundler.cmake
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake  PrintFinalReport.cmake  SetupQt.cmake  SetupShibokenAndPyside.cmake
src/: QtOpenGL.h.cmake
src/App/: Application.cpp  CMakeLists.txt  Document.cpp  Expression.cpp  PropertyContainer.h  PropertyUnits.cpp
src/Base/: CMakeLists.txt  Type.cpp  Type.h  TypePyImp.cpp
src/Gui/: .ManualAlignment.cpp.swp  Action.cpp  Application.cpp  Application.h  AutoSaver.cpp  CMakeLists.txt  ComboView.cpp  CommandPyImp.cpp  CommandStd.cpp  DlgActionsImp.cpp  DlgCreateNewPreferencePackImp.cpp  DlgCreateNewPreferencePackImp.h  DlgCustomizeImp.cpp  DlgEditFileIncludePropertyExternal.cpp  DlgExpressionInput.cpp  DlgPreferencesImp.cpp  DocumentModel.cpp  DocumentRecovery.cpp  DownloadManager.cpp  EditorView.cpp  FileDialog.cpp  Flag.cpp  GuiApplication.cpp  GuiApplication.h  MainWindow.cpp  ManualAlignment.cpp  MultiTouchNavigationStyle.cpp  NaviCube.cpp  NavigationStyle.h  PropertyView.cpp  ReportView.cpp  SceneInspector.cpp  SelectionView.cpp  SoDatumLabel.cpp  SoFCDB.cpp  SoFCOffscreenRenderer.cpp  SoTextLabel.cpp  SoTouchEvents.cpp  SoTouchEvents.h  SpaceballEvent.cpp  (+8 more)
src/Gui/Inventor/: SoFCBackgroundGradient.cpp
src/Gui/QSint/actionpanel/: actiongroup.cpp  actionpanel.cpp  taskgroup_p.cpp  taskheader_p.cpp
src/Gui/Quarter/: EventFilter.cpp  Mouse.cpp  SpaceNavigatorDevice.cpp  TouchDevice.cpp
src/Gui/Quarter/devices/: InputDevice.h  Keyboard.h  Mouse.h  SpaceNavigatorDevice.h  TouchDevice.h
src/Gui/Selection/: Selection.cpp
src/Gui/iisTaskPanel/src/: iistaskbox.cpp  iistaskgroup.cpp  iistaskheader.cpp  iistaskpanel.cpp
src/Gui/propertyeditor/: PropertyItem.cpp
src/MacAppBundle/: CMakeLists.txt
src/Main/: CMakeLists.txt
src/Mod/AddonManager/: AddonManager.py
src/Mod/Assembly/App/: AssemblyObject.cpp  AssemblyUtils.cpp  AssemblyUtils.h
src/Mod/Assembly/Gui/: CMakeLists.txt  ViewProviderAssembly.cpp
src/Mod/CAM/App/: AppPathPy.cpp
src/Mod/Cloud/Gui/: CMakeLists.txt
src/Mod/Drawing/Gui/: CMakeLists.txt
src/Mod/Fem/Gui/: CMakeLists.txt  Command.cpp
src/Mod/Image/Gui/: CMakeLists.txt  ImageView.cpp  ImageView.h
src/Mod/Import/App/: CMakeLists.txt  ImportOCAF2.cpp
src/Mod/Inspection/Gui/: CMakeLists.txt
src/Mod/Measure/App/: Measurement.cpp
src/Mod/Mesh/App/: AppMeshPy.cpp  CMakeLists.txt
src/Mod/Mesh/Gui/: CMakeLists.txt  Command.cpp  SegmentationBestFit.cpp  ViewProvider.cpp  ViewProviderCurvature.cpp
src/Mod/MeshPart/Gui/: CMakeLists.txt  Tessellation.cpp
src/Mod/Part/App/: AppPartPy.cpp
src/Mod/Part/Gui/: CMakeLists.txt  CrossSections.cpp  DlgProjectionOnSurface.cpp  Mirroring.cpp  SoBrepEdgeSet.cpp  SoBrepFaceSet.cpp  SoBrepPointSet.cpp  SoFCShapeObject.cpp  ViewProvider2DObject.cpp  ViewProviderGridExtension.cpp
src/Mod/PartDesign/App/: Feature.cpp  Feature.h  FeatureSketchBased.cpp  FeatureSketchBased.h
src/Mod/PartDesign/Gui/: CMakeLists.txt
src/Mod/Path/Gui/: CMakeLists.txt
src/Mod/Points/App/: AppPointsPy.cpp  CMakeLists.txt
src/Mod/Points/Gui/: CMakeLists.txt  Command.cpp
src/Mod/Raytracing/Gui/: CMakeLists.txt
src/Mod/ReverseEngineering/Gui/: CMakeLists.txt  Command.cpp  SegmentationManual.cpp
src/Mod/Robot/Gui/: CMakeLists.txt
src/Mod/Sandbox/App/: CMakeLists.txt
src/Mod/Sandbox/Gui/: CMakeLists.txt  Overlay.cpp  Workbench.cpp
src/Mod/Sketcher/App/: SketchObject.cpp
src/Mod/Sketcher/App/planegcs/: Constraints.cpp  GCS.cpp
src/Mod/Sketcher/Gui/: CMakeLists.txt  CommandConstraints.cpp  DrawSketchHandler.cpp  DrawSketchHandler.h  EditModeCoinManager.cpp  EditModeCoinManagerParameters.cpp  SketcherSettings.cpp  ViewProviderSketch.cpp
src/Mod/Spreadsheet/: TestSpreadsheet.py
src/Mod/Spreadsheet/App/: Cell.cpp
src/Mod/Spreadsheet/Gui/: CMakeLists.txt  PropertiesDialog.cpp  SpreadsheetView.cpp  Workbench.cpp  qtcolorpicker.cpp
src/Mod/Start/Gui/: CMakeLists.txt
src/Mod/Surface/Gui/: CMakeLists.txt
src/Mod/TechDraw/App/: CMakeLists.txt  Geometry.cpp
src/Mod/TechDraw/Gui/: CMakeLists.txt  Command.cpp
src/Mod/Test/Gui/: CMakeLists.txt
src/Mod/Tux/: NavigationIndicatorGui.py
src/Mod/Tux/Resources/: Tux.qrc
src/Mod/Web/App/: CMakeLists.txt
src/Mod/Web/Gui/: BrowserView.cpp  CMakeLists.txt
src/Tools/: addlocationcomment.py  updatecrowdin.py
src/Tools/_TEMPLATE_/Gui/: CMakeLists.txt
src/Tools/plugins/widget/: customwidgets.cpp
tests/src/Mod/PartDesign/App/: CMakeLists.txt  FeatureHole.cpp
tests/src/Mod/Sketcher/: CMakeLists.txt
tests/src/Mod/Sketcher/App/: SketchObject.cpp
tests/src/Mod/Sketcher/Gui/: CMakeLists.txt  DrawSketchHandler.cpp
